# webmention-receiver

./: .gitignore  Cargo.toml  build.sh  config.toml  readme.md
src/: db.rs  error.rs  main.rs  templates.rs  types.rs
src/assets/: style.css
src/migrations/: 0000_init.sql
src/procmacros/: lib.rs
src/templates/: base.html  domain.html  feed.xml  index.html
